--- a/images/test/Ronda Tourism Website/css/menu.css
+++ b/images/test/Ronda Tourism Website/css/menu.css
@@ -1,127 +1,234 @@
-@media (max-width: 1024px) {
-  .l-header .sidebar .menu-block-wrapper .level-1 > a,
-  .l-header .sidebar .menu-block-wrapper .level-1 > .menu {
-    opacity: 1;
-    position: relative;
-    left: 0;
-    transition: all 0.3s ease, opacity 1s ease;
-  }
+body {
+  line-height: 1.618;
+  font-family: Arial, Helvetica, sans-serif;
 }
-@media (max-width: 1024px) .l-header .sidebar .menu-block-wrapper .level-1>a {
-  width: calc(100% - 60px);
-  box-sizing: border-box;
+
+ol,
+ul {
+  list-style: none;
 }
-.menu-block-wrapper .level-1 a {
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+a {
   text-decoration: none;
 }
-@media (max-width: 1024px) .menu-block-wrapper .level-1>a,
-  .menu-block-wrapper .level-1>.nolink {
-  outline: none;
-  cursor: pointer;
+
+/**
+  * BOX HACKING
+  */
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+/**
+  * CLEAR FLOATS
+  * Reference: http://w3bits.com/clearfix
+  */
+
+.cf:after,
+.lab-grid:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/**
+  * CONTENT WRAPPER
+  */
+
+.wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 1.5em;
+  padding-right: 1.5em;
+  padding-left: 1.5em;
+  max-width: 1080px;
+}
+
+body {
+  background: #ddd;
+}
+
+#menu ul {
+  margin: 0;
+  padding: 0;
+}
+
+#menu .main-menu {
+  display: none;
+}
+
+#tm:checked + .main-menu {
+  display: block;
+}
+
+#menu input[type="checkbox"],
+#menu ul span.drop-icon {
+  display: none;
+}
+
+#menu li,
+#toggle-menu,
+#menu .sub-menu {
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.05);
+}
+
+#menu li,
+#toggle-menu {
+  border-width: 0 0 1px;
+}
+
+#menu .sub-menu {
+  background-color: #444;
+  border-width: 1px 1px 0;
+  margin: 0 1em;
+}
+
+#menu .sub-menu li:last-child {
+  border-width: 0;
+}
+
+#menu li,
+#toggle-menu,
+#menu a {
   position: relative;
   display: block;
-  font-size: 1rem;
-  line-height: 1.2em;
-  padding: 10px 20px;
+  color: white;
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.125);
 }
-@media (max-width: 1024px) .menu-block-wrapper .level-1 a,
-  .menu-block-wrapper .level-1 .nolink {
+
+#menu {
+  background-color: #333;
 }
-@media (max-width: 1024px) .l-header .sidebar * {
-  pointer-events: all !important;
+
+#toggle-menu {
+  background: #333;
 }
-@media (max-width: 1024px) body.mobile-nav-open * {
-  pointer-events: none;
+
+#toggle-menu,
+#menu a {
+  padding: 1em 1.5em;
 }
-a {
-  color: #0076a8;
-  text-decoration: none;
+
+#menu a {
+  transition: all 0.125s ease-in-out;
+  -webkit-transition: all 0.125s ease-in-out;
 }
-a {
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
+
+#menu a:hover {
+  background-color: white;
+  color: #09c;
 }
-*,
-:before,
-:after {
-  box-sizing: border-box;
+
+#menu .sub-menu {
+  display: none;
 }
-user agent stylesheet a:-webkit-any-link {
-  color: -webkit-link;
-  cursor: pointer;
-  text-decoration: underline;
+
+#menu input[type="checkbox"]:checked + .sub-menu {
+  display: block;
 }
-.menu-block-wrapper ul,
-.menu-block-wrapper li {
-  list-style: none;
-  text-align: right;
-  padding: 0;
-  margin: 0;
+
+#menu .sub-menu a:hover {
+  color: #444;
 }
-user agent stylesheet li {
-  text-align: -webkit-match-parent;
-}
-@media (max-width: 1024px) .menu-block-wrapper .menu {
-  text-align: left;
-}
-user agent stylesheet ul {
-  list-style-type: disc;
-}
-@media (max-width: 1024px) .l-header .sidebar {
-  z-index: 999;
-  overflow: visible;
-  position: fixed;
-  top: 0;
-  right: -370px;
-  width: 350px;
-  height: 100%;
-  text-align: left;
-  background: #fff;
-  box-shadow: 10px 0 30px rgb(0 0 0 / 30%);
-  transition: right 0.2s ease;
-  pointer-events: all !important;
-}
-@media (max-width: 1024px) body.mobile-nav-open {
-  overflow: hidden !important;
-  -webkit-overflow-scrolling: auto !important;
+
+#toggle-menu .drop-icon,
+#menu li label.drop-icon {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
+  right: 0;
+  top: 0;
 }
-body.i18n-en {
-  -webkit-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
+
+#menu label.drop-icon,
+#toggle-menu span.drop-icon {
+  padding: 1em;
+  font-size: 1em;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.125);
+  text-shadow: 0 0 0 transparent;
+  color: rgba(255, 255, 255, 0.75);
 }
-@media (max-width: 767px) body {
-  word-break: break-word;
-}
-body {
-  -webkit-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
-}
-html {
-  font-family: Zurich Haas Grotesk Round, Helvetica, Arial, sans-serif;
-  font-size: 137.5%;
-  line-height: 1.2em;
-  -webkit-font-smoothing: antialiased;
-  letter-spacing: 0.02em;
-  color: #767676;
-}
-html {
-  line-height: 1.15;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-*,
-:before,
-:after {
-  box-sizing: border-box;
-}
-*,
-:before,
-:after {
-  box-sizing: border-box;
+
+@media only screen and (min-width: 1024px) {
+  #menu .main-menu {
+    display: block;
+  }
+
+  #toggle-menu,
+  #menu label.drop-icon {
+    display: none;
+  }
+
+  #menu ul span.drop-icon {
+    display: inline-block;
+  }
+
+  #menu li {
+    float: left;
+    border-width: 0 1px 0 0;
+  }
+
+  #menu .sub-menu li {
+    float: none;
+  }
+
+  #menu .sub-menu {
+    border-width: 0;
+    margin: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 12em;
+    z-index: 3000;
+  }
+
+  #menu .sub-menu,
+  #menu input[type="checkbox"]:checked + .sub-menu {
+    display: none;
+  }
+
+  #menu .sub-menu li {
+    border-width: 0 0 1px;
+  }
+
+  #menu .sub-menu .sub-menu {
+    top: 0;
+    left: 100%;
+  }
+
+  #menu .sub-menu .drop-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1em;
+  }
+
+  #menu li:hover > input[type="checkbox"] + .sub-menu {
+    display: block;
+  }
 }
