--- a/images/test/Ronda Tourism Website/css/menu.css
+++ b/images/test/Ronda Tourism Website/css/menu.css
@@ -69,13 +69,12 @@ html {
   max-width: 1080px;
 }
 
-body {
-  background: #ddd;
-}
-
 #menu ul {
   margin: 0;
   padding: 0;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
 }
 
 #menu .main-menu {
@@ -94,8 +93,13 @@ body {
 #menu li,
 #toggle-menu,
 #menu .sub-menu {
-  border-style: solid;
+  /*border-style: solid; This put the strange border around the menu items */
   border-color: rgba(0, 0, 0, 0.05);
+
+  }
+
+
+
 }
 
 #menu li,
@@ -104,9 +108,9 @@ body {
 }
 
 #menu .sub-menu {
-  background-color: #444;
+  background-color: #3c3c3c;
   border-width: 1px 1px 0;
-  margin: 0 1em;
+  margin: 0 0em; /* THis will make the sub menu appear slimmer */
 }
 
 #menu .sub-menu li:last-child {
@@ -119,7 +123,12 @@ body {
   position: relative;
   display: block;
   color: white;
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.125);
+ /* text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.125);*/
+  border-top:1px solid #393939;
+}
+
+.submenu a {
+  color: #aeaeae;
 }
 
 #menu {
@@ -141,8 +150,8 @@ body {
 }
 
 #menu a:hover {
-  background-color: white;
-  color: #09c;
+  background-color: #3c3c3c;
+  color: white;
 }
 
 #menu .sub-menu {
@@ -154,7 +163,8 @@ body {
 }
 
 #menu .sub-menu a:hover {
-  color: #444;
+  color: white;
+  background-color: #3c3c3c;
 }
 
 #toggle-menu .drop-icon,
@@ -179,6 +189,11 @@ body {
     display: block;
   }
 
+  #menu a:hover {
+    background-color: #3c3c3c;
+    color: white;
+  }
+
   #toggle-menu,
   #menu label.drop-icon {
     display: none;
@@ -197,7 +212,11 @@ body {
     float: none;
   }
 
+
+
   #menu .sub-menu {
+    background-color: #333;
+
     border-width: 0;
     margin: 0;
     position: absolute;
