--- a/images/test/Ronda Tourism Website/css/temp mobile.css
+++ b/images/test/Ronda Tourism Website/css/temp mobile.css
@@ -187,7 +187,7 @@ html {
   color: rgba(255, 255, 255, 0.75);
 }
 
-#menu .main-menu .logo{
+#menu .main-menu #logo{
   display:none;
 }
 /*
@@ -206,80 +206,18 @@ html {
 }
 */
 
-#menu .addon{
-display:block;
-padding: 0;
-}
-#menu .addon a{
-padding: 1rem 0.5rem ;
-
- }
-
-.instagram{
-  font-size:1rem;
-  padding:0rem;
-  padding-left:1rem;
-  text-align:left;
-
-}
-
-.language-text{
-  display:inline;
-  padding-right:1rem;
-}
-
-.language {
-  text-align:center;
-
-}
-
-.language img{
-  width:1.8rem;
-  vertical-align:middle;
-}
-
-
-
-
-
 @media only screen and (min-width: 1024px) {
   #menu .main-menu {
-    display: flex;
-    justify-content:center;
-    flex-direction: row;
-
-
+    display: block;
   }
 
-  #toggle-menu,
-#menu a {
-  padding: 1em 0em;
-}
-
-/*
   #menu .main-menu #logo{
-        display:block;
-
-flex-grow: 2; 
-
-  }
- */
-
-
-#menu .main-menu .logo{
-  display:block;
-  font-family:Georgia, 'Times New Roman', Times, serif;
+    float:left;
+    display:block;
+font-family:Georgia, 'Times New Roman', Times, serif;
 text-transform:uppercase;
-}
-
-#menu .main-menu .logo a{
-  text-align:left;
-  padding-left:1rem;
-}
-
-#menu a{
-  text-align:center;
-}
+  }
+ 
   #menu a:hover {
     background-color: #3c3c3c;
     color: white;
@@ -294,36 +232,27 @@ text-transform:uppercase;
     display: inline-block;
   }
 
+  #menu ul{
+    display: inline-flex;
+    align-items: stretch;
+
+    justify-content:space-between;
+    flex-direction: row;
+  }
   #menu li {
-    float:center;
+
   }
 
-  #menu .logo{
-    
-    flex:3;
+
+/*Float: left; */
+    border-width: 0 1px 0 0;
   }
-
-  #menu li{
-    flex:2;
-  }
-
-  #menu .addon{
-    flex: 1;
-    justify-content: right;
-float:right; 
-padding: 0;
-padding-top:1.1rem;
-vertical-align:middle; }
-
-#menu .main-menu .addon a{
-  text-align:right;
-  padding-right:1rem;
-}
-
 
   #menu .sub-menu li {
     float: none;
   }
+
+
 
   #menu .sub-menu {
     background-color: #333;
@@ -362,32 +291,29 @@ vertical-align:middle; }
     display: block;
   }
 
+.language{
+  /*
+  text-align:center;
+  position:fixed;
+  float:right;
+  */
+  margin-left:auto;
+}
+
 .instagram{
-  margin-left: auto; /* Aligns flex item to left */
-  font-size:1rem;
-  padding:0rem;
-}
-
-.instagram a {
-  font-size:1.5rem;
-  padding:0rem;
-}
-
-#toggle-menu,
-#menu .addon a {
-  padding: 0;
+  /*
+  vertical-align:top;
+  padding-left:10rem;
+  float:right;
+  position:fixed;
+  */
+  margin-left:auto;
+text-align:right;
 }
 
 .language a img{
   vertical-align:middle;
   margin-left:1rem;
-  padding-top:0.3rem;
 
 }
-
-.language-text{
-  display:none;
-}
-
-
 }
