--- a/images/test/Ronda Tourism Website/css/stylesheet copy before style guide changes.css
+++ b/images/test/Ronda Tourism Website/css/stylesheet copy before style guide changes.css
@@ -161,6 +161,7 @@ a:hover {
 
 #blog-text-box h2 {
   text-align: center;
+  margin-top: 0.8rem;
 }
 
 #blog-text-box h3 {
@@ -291,8 +292,8 @@ a:hover {
 }
 
 #homepage-banner {
-  padding: 1rem 0rem 1rem 0rem;
-  }
+  z-index: -5;
+}
 
 #homepage-banner img {
   display: block;
@@ -305,31 +306,34 @@ a:hover {
 
 /* Blog image layouts styling */
 #full-width-banner {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom:1rem;
+  z-index: -5;
 }
 
-
 #full-width-banner img {
+  display: block;
   width: 100%;
   height: auto;
+  margin: auto;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
 }
 
 /* Quote banner */
 #quote {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
   text-align: center;
   background-color: white;
   width: 90%;
-margin:auto;
-  padding-bottom:1rem;
-  padding-top: 1rem;
+  margin: auto;
 }
 
 #quote h3 {
   font-family: Proxima Nova, Geneva, Tahoma, sans-serif;
   font-size: 2rem;
+  padding-top: 1.3rem;
+  margin: 0;
   color: white;
   font-style: italic;
 }
@@ -555,6 +559,7 @@ h2 {
   margin: 0;
   color: black;
   text-align: left;
+  padding-top: 0.5rem;
 }
 
 h3 {
@@ -940,6 +945,7 @@ html {
 
 .mobile-banner img {
   width: 100%;
+  height: 73vh;
   object-fit: cover;
   -webkit-transform: translatez(0);
   -moz-transform: translatez(0);
@@ -1024,7 +1030,7 @@ html {
   width: 100%;
   height: 100rem;
   margin: 0 auto;
-  padding: 1rem 0rem 1rem 0rem;
+  padding: 2rem 0 2rem 0;
 }
 
 .feature-container-large img {
@@ -1036,8 +1042,10 @@ html {
 }
 
 .feature-item-large {
+  background: black;
   position: relative;
   overflow: hidden;
+  padding: 1rem 0rem 1rem 0rem;
 }
 
 .centered-text-large {
@@ -1159,6 +1167,7 @@ html {
 }
 
 h4 {
+  padding-top: 1rem;
   text-align: center;
   letter-spacing: 4px;
   text-transform: uppercase;
@@ -1171,6 +1180,7 @@ h4 {
 /* Slideshow container */
 .slideshow-container {
   width: 100%;
+  height: 30rem;
   position: relative;
   margin: auto;
   padding: 1rem 0rem 1rem 0rem;
@@ -1343,9 +1353,6 @@ h4 {
     font-family: "Source Sans Pro", "Helvetica" sans-serif;
     font-size: 1.1rem;
     font-weight: 100;
-    margin:0;
-    padding-top:1rem;
-    padding-bottom:1rem;
   }
 
   #boxes .box img:hover {
@@ -1356,10 +1363,6 @@ h4 {
 
   .container {
     max-width: 100% !important;
-    margin-top:1rem;
-    margin-bottom:1rem;
-    margin-left:auto;
-    margin-right:auto;
   }
 
   #image-1-box .box .image img {
@@ -1618,6 +1621,7 @@ h4 {
   }
 
   h2 {
+    padding-top: 2rem;
     text-align: center;
     letter-spacing: 4px;
     text-transform: uppercase;
@@ -1626,6 +1630,7 @@ h4 {
   }
 
   h4 {
+    padding-top: 2rem;
     text-align: center;
     letter-spacing: 4px;
     text-transform: uppercase;
@@ -1688,6 +1693,7 @@ h4 {
     margin: 0;
     width: 100%;
     background: #fff;
+    height: 88vh;
     object-fit: cover;
     object-position: 100% 25%;
     -webkit-transform: translatez(0);
@@ -1697,7 +1703,10 @@ h4 {
     transform: translatez(0);
   }
 
- 
+  #homepage-banner {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
 
   #homepage-banner img {
     height: 25rem;
